--- a/DeveloperPortal/DeveloperPortal.csproj
+++ b/DeveloperPortal/DeveloperPortal.csproj
@@ -44,7 +44,7 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+        <MauiIcon Include="Resources\AppIcon\appicon.svg" />
 
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
@@ -64,6 +64,7 @@
         <PackageReference Include="Auth0.AuthenticationApi" Version="7.26.2" />
         <PackageReference Include="Auth0.ManagementApi" Version="7.26.2" />
         <PackageReference Include="Auth0.OidcClient.MAUI" Version="1.0.0" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.4" />
         <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0-preview.4.24267.6" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
@@ -71,8 +72,10 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.40" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Plugin.Maui.Audio" Version="2.0.0" />
         <PackageReference Include="Sentry.Maui" Version="4.7.0" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
     </ItemGroup>
 
     <ItemGroup>
