--- a/DeveloperPortalApi/Properties/launchSettings.json
+++ b/DeveloperPortalApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5186;http://192.168.2.28:5186;http://0.0.0.0:5186nc",
+      "applicationUrl": "http://localhost:5186;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7059;http://localhost:5186",
+      "applicationUrl": "https://localhost:7059",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
