--- a/DeveloperPortal/DeveloperPortal.csproj
+++ b/DeveloperPortal/DeveloperPortal.csproj
@@ -71,6 +71,7 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
         <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.40" />
+        <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Plugin.Maui.Audio" Version="2.0.0" />
         <PackageReference Include="Sentry.Maui" Version="4.7.0" />
