--- a/DeveloperPortal/DeveloperPortal.csproj
+++ b/DeveloperPortal/DeveloperPortal.csproj
@@ -99,4 +99,8 @@
         <EmbeddedResource Update="Resources\AppResources.nl-NL.resx" Generator="ResXFileCodeGenerator" LastGenOutput="AppResources.nl-NL.Designer.cs"/>
     </ItemGroup>
 
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.19041.0'">
+      <PackageReference Include="WinUIEx" Version="2.3.4" />
+    </ItemGroup>
+
 </Project>
