--- a/DeveloperPortal.Tests/DeveloperPortal.Tests.csproj
+++ b/DeveloperPortal.Tests/DeveloperPortal.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="2024.2.0-eap1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Moq.Contrib.HttpClient" Version="1.4.0" />
+    <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.8.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
       <PrivateAssets>all</PrivateAssets>
